--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link href="styles.css" rel="stylesheet">
+    <script src="javascript.js" defer></script>
 </head>
 
 <body>
